--- a/index2.html
+++ b/index2.html
@@ -2,25 +2,41 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="css.css">
 </head>
 <body>
-    <table border="1" align="center">
+    <table border="1" align="center" CellPadding="0px">
         <tr height="60">
-            <td width="270"></td>
-            <td colspan="3" width="420"></td>
+            <td valign="top" width="270" class="cell1">Sở giáo dục và đào tạo <br> trường tin học ngoại ngữ  sao việt</td>
+            <td colspan="3" width="420" class="cell2">
+                Trung tâm tin học <font class="saoviet">sao việt</font>
+            </td>
         </tr>
         <tr height="96">
-                <td width="270"></td>
-                <td colspan="3" width="420"></td>
+                <td width="270">
+                   
+                </td>
+                <td colspan="3" width="420" align="left">
+                    <UL>
+                        <LI>569 Nguyễn Kiệm, P9- Quận Phú Nhuận- Tp.HCM
+                        <LI>Tel :(08) 9973317 – 9120458
+                        <LI>Fax :(08) 8476992 
+                        <LI>E-mail :tintrungcoltd@saoviet.edu.vn 
+                        <LI>Website:http://www.saoviet.edu.vn
+                    </UL>
+                </td>
         </tr>
         <tr  height="25">
-            <td rowspan="2" width="270" ></td>
-            <td  width="140"></td>
-            <td width="140"></td>
-            <td width="140"></td>
+            <td rowspan="2" width="270" >
+                <img src="logo.gif" alt="" class="cell5">
+            </td>
+            <td  width="140" class="bg1"></td>
+            <td width="140" class="bg2"></td>
+            <td width="140" class="bg3"></td>
         </tr>
         <tr height="47">
-            <td width="420" colspan="3"></td>
+            <td width="420" colspan="3" class="cell6">
+            </td>
         </tr>
         <tr height="72">
                 <td width="690" colspan="4"></td>
